--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
                 <div class="sub-menu">
                     <div class="icon-box">
                         <div class="icon"><i class="fas fa-layer-group"></i></div>
-                        <div class="text">
-                            <div class="title"><a href="planificacion.html"
-                                    style="color: black; text-decoration: none;">Planificacion de interfaces web</a> <i
-                                    class="far fa-arrow-right"></i></div>
+                        <div class="text"><a href="planificacion.html">
+                            <div class="title">Planificacion de interfaces web <i class="far fa-arrow-right"></i></div>
                             <div class="sub-text">Edit your code while slowing down time.</div>
+                        </a>
                         </div>
                     </div>
                     <div class="icon-box">
