--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +8,9 @@
     <script src="https://kit.fontawesome.com/628c8d2499.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/style.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="assets/print.css" type="text/css" media="print"/>
 </head>
-
 <body>
     <div class="nav">
         <nav id="menu">
@@ -30,30 +29,34 @@
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="fas fa-assistive-listening-systems"></i></div>
-                        <div class="text">
+                        <div class="text"><a href="accesibilidad.html"></a>
                             <div class="title">Accesibilidad web <i class="far fa-arrow-right"></i></div>
                             <div class="sub-text">Think of an idea, and have an AI create it.</div>
+                        </a>
                         </div>
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="fas fa-mouse"></i></div>
-                        <div class="text">
+                        <div class="text"><a href="usabilidad.html"></a>
                             <div class="title">Usabilidad web <i class="far fa-arrow-right"></i></div>
                             <div class="sub-text">Remove mass from any object.</div>
+                        </a>
                         </div>
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="far fa-copyright"></i></div>
-                        <div class="text">
+                        <div class="text"><a href="propiedad.html"></a>
                             <div class="title">Derechos de propiedad <i class="far fa-arrow-right"></i></div>
                             <div class="sub-text">Remove mass from any object.</div>
+                        </a>
                         </div>
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="far fa-images"></i></div>
-                        <div class="text">
+                        <div class="text"><a href="imagenes.html"></a>
                             <div class="title">Imagenes para la web <i class="far fa-arrow-right"></i></div>
                             <div class="sub-text">Remove mass from any object.</div>
+                        </a>
                         </div>
                     </div>
                     <div class="sub-menu-holder"></div>
