--- a/index.html
+++ b/index.html
@@ -22,40 +22,40 @@
                     <div class="icon-box">
                         <div class="icon"><i class="fas fa-layer-group"></i></div>
                         <div class="text"><a href="planificacion.html">
-                            <div class="title">Planificacion de interfaces web <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">Edit your code while slowing down time.</div>
+                            <div class="title">Planificacion <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Planificación de una interfaces web.</div>
                         </a>
                         </div>
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="fas fa-assistive-listening-systems"></i></div>
                         <div class="text"><a href="accesibilidad.html"></a>
-                            <div class="title">Accesibilidad web <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">Think of an idea, and have an AI create it.</div>
+                            <div class="title">Accesibilidad <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Accesibilidad de una interfaz web.</div>
                         </a>
                         </div>
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="fas fa-mouse"></i></div>
                         <div class="text"><a href="usabilidad.html"></a>
-                            <div class="title">Usabilidad web <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">Remove mass from any object.</div>
+                            <div class="title">Usabilidad <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Usabilidad de una interfaz web.</div>
                         </a>
                         </div>
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="far fa-copyright"></i></div>
                         <div class="text"><a href="propiedad.html"></a>
-                            <div class="title">Derechos de propiedad <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">Remove mass from any object.</div>
+                            <div class="title">Propiedad intelectual <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Derechos de la propiedad intelectual.</div>
                         </a>
                         </div>
                     </div>
                     <div class="icon-box">
                         <div class="icon"><i class="far fa-images"></i></div>
                         <div class="text"><a href="imagenes.html"></a>
-                            <div class="title">Imagenes para la web <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">Remove mass from any object.</div>
+                            <div class="title">Imágenes <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Imágenes para una interfaz web.</div>
                         </a>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
             </div>
             <div class="menu-item highlight">
                 <div class="menu-text">
-                    <a href="">SUPPORT</a>
+                    <a href="">HERRAMIENTAS</a>
                 </div>
                 <div class="sub-menu triple">
                     <div class="top-container gb c icon-box">
@@ -167,35 +167,6 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-item">
-                <div class="menu-text">
-                    <a href="">COMMUNITY</a>
-                </div>
-                <div class="sub-menu">
-                    <div class="icon-box">
-                        <div class="icon"><i class="far fa-satellite"></i></div>
-                        <div class="text">
-                            <div class="title">Forum <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">Join our passionate community.</div>
-                        </div>
-                    </div>
-                    <div class="icon-box">
-                        <div class="icon"><i class="fab fa-twitter-square"></i></div>
-                        <div class="text">
-                            <div class="title">Twitter <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">Follow us on twitter.</div>
-                        </div>
-                    </div>
-                    <div class="icon-box">
-                        <div class="icon"><i class="fab fa-twitch"></i></div>
-                        <div class="text">
-                            <div class="title">Live Stream <i class="far fa-arrow-right"></i></div>
-                            <div class="sub-text">We stream content every day.</div>
-                        </div>
-                    </div>
-                    <div class="sub-menu-holder"></div>
-                </div>
-            </div>
             <div id="sub-menu-container">
                 <div id="sub-menu-holder">
                     <div id="sub-menu-bottom">
@@ -217,6 +188,12 @@
             <li><a target="_top" href="https://fjolt.com/article/css-only-stripe-menu-with-clip">Read Article</a></li>
             <li><a target="_top" href="https://github.com/smpnjn/stripe-like-menu">GitHub Repo</a></li>
         </ul>
+    </div>
+
+    <div class="footer">
+        <footer>
+            <p>David Zapico</p>
+        </footer>
     </div>
 
 </body>
