--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <div class="menu-item highlight">
                 <div class="menu-text">
-                    <a href="">HERRAMIENTAS</a>
+                    <h2><a href="">HERRAMIENTAS</a></h2>
                 </div>
                 <div class="sub-menu triple">
                     <div class="top-container gb c icon-box">
@@ -175,11 +175,11 @@
             </div>
         </nav>
     </div>
-
-
-
-
     <div id="content">
+
+
+
+
 
     </div>
     <div id="info-box">
@@ -190,12 +190,12 @@
         </ul>
     </div>
 
+
+
     <div class="footer">
         <footer>
-            <p>David Zapico</p>
+            <h2>©David Zapico</h2>
         </footer>
     </div>
-
 </body>
-
 </html>
