--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width", initial-scale="1", shrink-to-fit="no">
     <meta http-equiv="cache-control" content="no-cache" />
     <meta name="robots" content="index,follow" />
-    <meta name="author" content="DAVID ZAPICO">
-    <meta name="copyright" content="DAVID ZAPICO" />
-    <meta name="description" content="Página web personal y portafolio de David Zapico." />
-    <meta name="keywords" content="DavidZapico, David, Zapico, Mancebo, Gredia, Grupo Apolo, Asturias" />
-    <meta name="template" content="David Zapico Theme es" />
-
-    <!-- JS -->
-    <script src="https://kit.fontawesome.com/628c8d2499.js" crossorigin="anonymous"></script>
+    <meta name="author" content="David Zapico">
+    <meta name="copyright" content="David Zapico - Proyecto diseño web" />
+    <meta name="description" content="Proyecto web de la asignatura de 2DAW. Diseño de interfaces web." />
+    <meta name="keywords" content="Proyecto web, David, Zapico, Guia diseño web, 2DAW, Diseño de interfaces web" />
+    <meta name="template" content="Proyecto diseño web" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/style.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="assets/print.css" type="text/css" media="print" />
+    
+    <!-- JS -->
+    <script src="https://kit.fontawesome.com/628c8d2499.js" crossorigin="anonymous"></script>  
 
     <!-- FAVICONS -->
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon/favicon.ico" />
@@ -42,6 +42,7 @@
     <meta name="msapplication-TileImage" content="../img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- TITLE -->
     <title>Guia de estilos web - David Zapico</title>
 </head>
 <body>
@@ -98,7 +99,7 @@
                 </div>
                 <div class="menu-item highlight">
                     <div class="menu-text">
-                        SERVICIOS
+                        <p>SERVICIOS</p> 
                     </div>
                     <div class="sub-menu double">
                         <div class="icon-box gb a">
@@ -210,9 +211,17 @@
             </nav>
         </div>
     </header>
-
     <div id="contenido">
-        <h1>Planificacion de interfaces web</h1>
+        <h1>Guia de estilos para una interfaz web</h1>
+        <br/><br/>
+        <p>Hoy día</p>
+
+
+
+
+
+
+
 
 
 
@@ -225,12 +234,8 @@
             <li><a target="_top" href="https://github.com/smpnjn/stripe-like-menu">GitHub Repo</a></li>
         </ul>
     </div>
-
-
-
     <footer>
-        <p>&copy;David Zapico | Proyecto Diseño de interfaces web</p>
+        <p>&copy; David Zapico | Proyecto Diseño de interfaces web</p>
     </footer>
 </body>
-
 </html>
