--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
 </head>
 <body>
     <header>
-        <div class="nav">
             <nav id="menu">
                 <div class="menu-item">
                     <div class="menu-text">
-                        CONTENIDO
+                        <p>CONTENIDO</p> 
                     </div>
                     <div class="sub-menu">
                         <div class="icon-box">
@@ -152,7 +151,7 @@
                 </div>
                 <div class="menu-item highlight">
                     <div class="menu-text">
-                        HERRAMIENTAS
+                        <p>HERRAMIENTAS</p> 
                     </div>
                     <div class="sub-menu triple">
                         <div class="top-container gb c icon-box">
@@ -209,12 +208,19 @@
                     </div>
                 </div>
             </nav>
-        </div>
     </header>
     <div id="contenido">
         <h1>Guia de estilos para una interfaz web</h1>
         <br/><br/>
-        <p>Hoy día</p>
+        <div class="texto">
+            <p>Las guías de estilo hacen referencia en el ámbito del marketing online a los manuales para el diseño uniforme de páginas web. 
+                Una guía de estilo está estrechamente relacionada tanto con el diseño corporativo como con la identidad corporativa de las 
+                empresas y se encarga de que la identidad visual de la empresa en cuestión también pueda ser reconocida inmediatamente en la 
+                red.
+        
+            </p>
+        </div>
+        
 
 
 
@@ -230,12 +236,12 @@
     <div id="info-box">
         <ul>
             <li><a target="_top" href="https://twitter.com/thisisfjolt">Follow on Twitter</a></li>
-            <li><a target="_top" href="https://fjolt.com/article/css-only-stripe-menu-with-clip">Read Article</a></li>
-            <li><a target="_top" href="https://github.com/smpnjn/stripe-like-menu">GitHub Repo</a></li>
+            <li><a target="_blank" href="https://fjolt.com/article/css-only-stripe-menu-with-clip">Read Article</a></li>
+            <li><a target="_blank" href="https://github.com/smpnjn/stripe-like-menu">GitHub Repo</a></li>
         </ul>
     </div>
     <footer>
-        <p>&copy; David Zapico | Proyecto Diseño de interfaces web</p>
+        <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
 </html>
