--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <nav id="menu">
                 <div class="menu-item">
                     <div class="menu-text">
-                        <p>CONTENIDO</p> 
+                        <p class="active">CONTENIDO</p> 
                     </div>
                     <div class="sub-menu">
                         <div class="icon-box">
