--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </header>
     <div id="contenido">
         <h1>Guia de estilos para una interfaz web</h1>
-        <br/><br/>
+        <img src="assets/img/diseno-web.png" alt="diseño web">
         <div class="texto">
             <p>Las guías de estilo hacen referencia en el ámbito del marketing online a los manuales para el diseño uniforme de páginas web. 
                 Una guía de estilo está estrechamente relacionada tanto con el diseño corporativo como con la identidad corporativa de las 
@@ -224,7 +224,7 @@
         
 
 
-
+        
 
 
 
@@ -236,9 +236,9 @@
     </div>
     <div id="info-box">
         <ul>
-            <li><a target="_top" href="https://twitter.com/thisisfjolt">Follow on Twitter</a></li>
-            <li><a target="_blank" href="https://fjolt.com/article/css-only-stripe-menu-with-clip">Read Article</a></li>
-            <li><a target="_blank" href="https://github.com/smpnjn/stripe-like-menu">GitHub Repo</a></li>
+            <li><a target="_blank" href="#">Follow on Twitter</a></li>
+            <li><a target="_blank" href="#">Read Article</a></li>
+            <li><a target="_blank" href="#">Repo</a></li>
         </ul>
     </div>
     <footer>
