--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="sub-menu-holder"></div>
                     </div>
                 </div>
-                <div class="menu-item highlight">
+                <div class="menu-item">
                     <div class="menu-text">
                         <p>SERVICIOS</p> 
                     </div>
@@ -149,7 +149,7 @@
                         <div class="sub-menu-holder"></div>
                     </div>
                 </div>
-                <div class="menu-item highlight">
+                <div class="menu-item">
                     <div class="menu-text">
                         <p>HERRAMIENTAS</p> 
                     </div>
