--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
     <meta name="template" content="Proyecto diseño web" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/style.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="assets/print.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="assets/css/print.css" type="text/css" media="print" />
     
     <!-- JS -->
     <script src="https://kit.fontawesome.com/628c8d2499.js" crossorigin="anonymous"></script>  
 
     <!-- FAVICONS -->
-    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon/favicon.ico" />
-    <link rel="icon" type="image/x-icon" href="../img/favicon/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
 
-    <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="../img/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="../img/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="../img/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="../img/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="../img/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="../img/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="assets/img/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="assets/img/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="assets/img/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="assets/img/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="assets/img/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="assets/img/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="asssets/img/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
 
-    <link rel="manifest" href="../img/favicon/manifest.json">
+    <link rel="manifest" href="assets/img/favicons/manifest.json">
 
     <meta name="msapplication-TileColor" content="#122562">
-    <meta name="msapplication-TileImage" content="../img/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="assets/img/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#122562">
 
     <!-- TITLE -->
@@ -210,9 +210,24 @@
             </nav>
     </header>
     <div id="contenido">
-        <h1>Guia de estilos para una interfaz web</h1>
+        <h1>Diseño web - guia de estilo de una interfaz web</h1>
         <img src="assets/img/diseno-web.png" alt="diseño web">
         <div class="texto">
+            <p>
+                El diseño web es un área enfocada en el desarrollo de interfaces digitales, como el diseño de sitios y aplicaciones para web. 
+                Para ello, los diseñadores web crean las páginas utilizando lenguajes de marcado como HTML. El diseño web implica trabajo 
+                relacionado con el layout y diseño de páginas online, así como la producción de contenido, aunque generalmente se aplica a la 
+                creación de sitios web. Cinco beneficios que puedes tener al desarrollar un diseño web profesional:
+            </p><br/>
+            <ol>
+                <li>Buenas primeras impresiones</li>
+                <li>Mejores procesos de SEO</li>
+                <li>Ventaja competitiva</li>
+                <li>Mayor generación de ingresos</li>
+                <li>Aumento del marketing boca a boca</li>
+                <li>Acceso más práctico y rápido a tu negocio</li>
+            </ol>
+            <div class="linea"></div>
             <p>Las guías de estilo hacen referencia en el ámbito del marketing online a los manuales para el diseño uniforme de páginas web. 
                 Una guía de estilo está estrechamente relacionada tanto con el diseño corporativo como con la identidad corporativa de las 
                 empresas y se encarga de que la identidad visual de la empresa en cuestión también pueda ser reconocida inmediatamente en la 
