--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -1,12 +1,258 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accesibilidad web - David Zapico</title>
+    <!-- META TAGS -->
+    <meta name="viewport" content="width=device-width" , initial-scale="1" , shrink-to-fit="no">
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="David Zapico">
+    <meta name="copyright" content="David Zapico - Proyecto diseño web" />
+    <meta name="description" content="Proyecto web de la asignatura de 2DAW. Diseño de interfaces web." />
+    <meta name="keywords" content="Proyecto web, David, Zapico, Guia diseño web, 2DAW, Diseño de interfaces web" />
+    <meta name="template" content="Proyecto diseño web" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="assets/css/print.css" type="text/css" media="print" />
+
+    <!-- JS -->
+    <script src="https://kit.fontawesome.com/628c8d2499.js" crossorigin="anonymous"></script>
+
+    <!-- FAVICONS -->
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
+
+    <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="assets/img/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="assets/img/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="assets/img/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="assets/img/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="assets/img/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="assets/img/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="asssets/img/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
+
+    <link rel="manifest" href="assets/img/favicons/manifest.json">
+
+    <meta name="msapplication-TileColor" content="#122562">
+    <meta name="msapplication-TileImage" content="assets/img/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#122562">
+
+    <!-- TITLE -->
+    <title>Planificación de una interfaz web - David Zapico</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav id="menu">
+            <div class="menu-item">
+                <div class="menu-text">
+                    <p class="active">CONTENIDO</p>
+                </div>
+                <div class="sub-menu">
+                    <div class="icon-box">
+                        <div class="icon"><i class="fas fa-layer-group"></i></div>
+                        <div class="text"><a href="planificacion.html">
+                                <div class="title">Planificacion <i class="far fa-arrow-right"></i></div>
+                                <div class="sub-text">Planificación de una interfaces web.</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="icon-box">
+                        <div class="icon"><i class="fas fa-assistive-listening-systems"></i></div>
+                        <div class="text"><a href="accesibilidad.html"></a>
+                            <div class="title">Accesibilidad <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Accesibilidad de una interfaz web.</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="icon-box">
+                        <div class="icon"><i class="fas fa-mouse"></i></div>
+                        <div class="text"><a href="usabilidad.html"></a>
+                            <div class="title">Usabilidad <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Usabilidad de una interfaz web.</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="icon-box">
+                        <div class="icon"><i class="far fa-copyright"></i></div>
+                        <div class="text"><a href="propiedad.html"></a>
+                            <div class="title">Propiedad intelectual <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Derechos de la propiedad intelectual.</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="icon-box">
+                        <div class="icon"><i class="far fa-images"></i></div>
+                        <div class="text"><a href="imagenes.html"></a>
+                            <div class="title">Imágenes <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Imágenes para una interfaz web.</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sub-menu-holder"></div>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="menu-text">
+                    <p>SERVICIOS</p>
+                </div>
+                <div class="sub-menu double">
+                    <div class="icon-box gb a">
+                        <div class="icon"><i class="far fa-question-circle"></i></div>
+                        <div class="text">
+                            <div class="title">Consult <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">From Professionals</div>
+                        </div>
+                    </div>
+                    <div class="icon-box gb b">
+                        <div class="icon"><i class="far fa-users-class"></i></div>
+                        <div class="text">
+                            <div class="title">Teach <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">In Classroom</div>
+                        </div>
+                    </div>
+                    <div class="icon-box gb c">
+                        <div class="icon"><i class="far fa-school"></i></div>
+                        <div class="text">
+                            <div class="title">Learn <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">By Video</div>
+                        </div>
+                    </div>
+                    <div class="icon-box gb d">
+                        <div class="icon"><i class="far fa-chess-rook"></i></div>
+                        <div class="text">
+                            <div class="title">Keep <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">The Castle</div>
+                        </div>
+                    </div>
+                    <div class="icon-box gb e">
+                        <div class="icon"><i class="far fa-video-plus"></i></div>
+                        <div class="text">
+                            <div class="title">Become <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">A Creator</div>
+                        </div>
+                    </div>
+                    <div class="icon-box gb f">
+                        <div class="icon"><i class="far fa-cat"></i></div>
+                        <div class="text">
+                            <div class="title">Understand <i class="far fa-arrow-right"></i></div>
+                            <div class="sub-text">Our Journey</div>
+                        </div>
+                    </div>
+                    <div class="bottom-container">
+                        ¿Prefieres ver la info en pdf? <a href="#">Ver pdfs</a>
+                    </div>
+                    <div class="sub-menu-holder"></div>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="menu-text">
+                    <p>HERRAMIENTAS</p>
+                </div>
+                <div class="sub-menu triple">
+                    <div class="top-container gb c icon-box">
+                        <div class="icon big"><i class="far fa-book"></i></div>
+                        <div class="text">
+                            <div class="title">Where to start</div>
+                            <div class="sub-text">Find out where to begin below</div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h3>Your Journey</h3>
+                        <a href="#">Get Started</a>
+                        <a href="#">Learn the Basics</a>
+                        <a href="#">Get Advanced</a>
+                        <a href="#">Start Teaching</a>
+                    </div>
+                    <div class="box">
+                        <h3>Your Tools</h3>
+                        <a href="#">Turbo Editor</a>
+                        <a href="#">Time Stopper</a>
+                        <a href="#">Brain Enhancer</a>
+                        <a href="#">Network Maker</a>
+                    </div>
+                    <div class="icon-box flat">
+                        <div class="icon"><i class="fal fa-plug"></i></div>
+                        <div class="text">
+                            <div class="title">API Guide <i class="far fa-arrow-right"></i></div>
+                        </div>
+                    </div>
+                    <div class="icon-box flat">
+                        <div class="icon"><i class="fal fa-comments"></i></div>
+                        <div class="text">
+                            <div class="title">Support Line <i class="far fa-arrow-right"></i></div>
+                        </div>
+                    </div>
+                    <div class="icon-box flat">
+                        <div class="icon"><i class="fal fa-phone-volume"></i></div>
+                        <div class="text">
+                            <div class="title">Live Chat <i class="far fa-arrow-right"></i></div>
+                        </div>
+                    </div>
+                    <div class="icon-box flat">
+                        <div class="icon"><i class="fal fa-book-spells"></i></div>
+                        <div class="text">
+                            <div class="title">Documentation <i class="far fa-arrow-right"></i></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="sub-menu-container">
+                <div id="sub-menu-holder">
+                    <div id="sub-menu-bottom">
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div id="contenido">
+        <h1>Planificacion de una interfaz web</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+    <div id="info-box">
+        <ul>
+            <li><a target="_blank" href="#">Follow on Twitter</a></li>
+            <li><a target="_blank" href="#">Read Article</a></li>
+            <li><a target="_blank" href="#">Repo</a></li>
+        </ul>
+    </div>
+    <footer>
+        <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
+    </footer>
 </body>
+
 </html>
