--- a/pdfs.html
+++ b/pdfs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <!-- META TAGS -->
     <meta name="viewport" content="width=device-width" , initial-scale="1" , shrink-to-fit="no">
@@ -43,8 +44,9 @@
     <meta name="theme-color" content="#122562">
 
     <!-- TITLE -->
-    <title>Guia de estilos web - David Zapico</title>
+    <title>Planificación de una interfaz web - David Zapico</title>
 </head>
+
 <body>
     <header>
         <nav id="menu">
@@ -98,7 +100,7 @@
             </div>
             <div class="menu-item">
                 <div class="menu-text">
-                    <p>OTRAS GUIAS</p>
+                    <p>SERVICIOS</p>
                 </div>
                 <div class="sub-menu double">
                     <div class="icon-box gb a">
@@ -144,7 +146,7 @@
                         </div>
                     </div>
                     <div class="bottom-container">
-                        ¿Prefieres ver la info en pdf? <a href="pdfs.html">Ver pdfs</a>
+                        ¿Prefieres ver la info en pdf? <a class="active">Ver pdfs</a>
                     </div>
                     <div class="sub-menu-holder"></div>
                 </div>
@@ -210,45 +212,30 @@
         </nav>
     </header>
     <div id="contenido">
-        <h1>Diseño web - guia de estilo de una interfaz web</h1>
-        <img src="assets/img/diseno-web.png" alt="diseño web">
-        <div class="texto">
-            <p>
-                El diseño web es un área enfocada en el desarrollo de interfaces digitales, como el diseño de sitios y
-                aplicaciones para web.
-                Para ello, los diseñadores web crean las páginas utilizando lenguajes de marcado como HTML. El diseño
-                web implica trabajo
-                relacionado con el layout y diseño de páginas online, así como la producción de contenido, aunque
-                generalmente se aplica a la
-                creación de sitios web. Cinco beneficios que puedes tener al desarrollar un diseño web profesional:
-            </p><br />
-            <ol>
-                <li>Buenas primeras impresiones</li>
-                <li>Mejores procesos de SEO</li>
-                <li>Ventaja competitiva</li>
-                <li>Mayor generación de ingresos</li>
-                <li>Aumento del marketing boca a boca</li>
-                <li>Acceso más práctico y rápido a tu negocio</li>
-            </ol>
-            <div class="linea"></div>
-            <p>
-                Las guías de estilo hacen referencia en el ámbito del marketing online a los manuales para el diseño
-                uniforme de páginas web.
-                Una guía de estilo está estrechamente relacionada tanto con el diseño corporativo como con la identidad
-                corporativa de las
-                empresas y se encarga de que la identidad visual de la empresa en cuestión también pueda ser reconocida
-                inmediatamente en la
-                red. Propiedades de una guía de estilo para una ionterfaz web:
-            </p> <br />
-            <ul>
-                <li>Color</li>
-                <li>Tipografía</li>
-                <li>Iconos</li>
-                <li>Accesibilidad</li>
-                <li>Usabilidad</li>
-                <li>Tipos de imágenes</li>
-            </ul>
-        </div>
+        <h1>Recursos Pdf</h1>
+        <h3>Temas</h3>
+        <ol>
+            <li><a href="assets/pdfs/U1/Planificación de interfaces web.pdf" target="_blank">Planificación de interfaces web</a></li>
+            <li><a href="assets/pdfs/U2/Accesibilidad web.pdf" target="_blank">Accesibilidad web</a></li>
+            <li><a href="assets/pdfs/U3/usabilidad-web.pdf" target="_blank">Usabilidad web</a></li>
+            <li><a href="assets/pdfs/U4/Derechos de la propiedad intelectual.pdf" target="_blank">Derechos de la propiedad intelectual</a></li>
+            <li><a href="assets/pdfs/U5/Imagenes para la web.pdf" target="_blank">Imágenes para la web</a></li>
+        </ol>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -273,4 +260,5 @@
         <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
+
 </html>
