--- a/pdfs.html
+++ b/pdfs.html
@@ -220,9 +220,17 @@
             <li><a href="assets/pdfs/U3/usabilidad-web.pdf" target="_blank">Usabilidad web</a></li>
             <li><a href="assets/pdfs/U4/Derechos de la propiedad intelectual.pdf" target="_blank">Derechos de la propiedad intelectual</a></li>
             <li><a href="assets/pdfs/U5/Imagenes para la web.pdf" target="_blank">Imágenes para la web</a></li>
-        </ol>
-
-
+        </ol><br/><br/>
+        <h3>Otros recursos</h3>
+        <ul>
+            <li><a href="assets/pdfs/color.pdf" target="_blank">Color</a></li>
+            <li><a href="assets/pdfs/Etiquetas Semánticas HTML5.pdf" target="_blank">Etiquetas semánticas de HTML5</a></li>
+            <li><a href="assets/pdfs/GUIA_WEB.pdf" target="_blank">Guia web - Universidad de Málaga</a></li>
+            <li><a href="assets/pdfs/Guía de estilo.pdf" target="_blank">Guia de estilo web</a></li>
+            <li><a href="assets/pdfs/Modelo de cajas_CSS.pdf" target="_blank">Modelo de cajas</a></li>
+            <li><a href="assets/pdfs/Accesibilidad_web_y_SEO_capitulo_ampliado_olga_carreras.pdf" target="_blank">Accesibilidad web y SEO - Olga Carreras</a></li>
+            <li><a href="assets/pdfs/Accesibilidad_web_y_SEO_capitulo_ampliado_olga_carreras.pdf" target="_blank">Guia sobre la accesibilidad web y SEO - Olga Carreras</a></li>
+        </ul>
 
 
 
