--- a/index.html
+++ b/index.html
@@ -154,50 +154,33 @@
                     <p>HERRAMIENTAS</p>
                 </div>
                 <div class="sub-menu triple">
-                    <div class="top-container gb c icon-box">
-                        <div class="icon big"><i class="far fa-book"></i></div>
-                        <div class="text">
-                            <div class="title">Where to start</div>
-                            <div class="sub-text">Find out where to begin below</div>
-                        </div>
-                    </div>
                     <div class="box">
-                        <h3>Your Journey</h3>
+                        <h3>Color</h3>
                         <a href="#">Get Started</a>
                         <a href="#">Learn the Basics</a>
                         <a href="#">Get Advanced</a>
                         <a href="#">Start Teaching</a>
                     </div>
                     <div class="box">
-                        <h3>Your Tools</h3>
+                        <h3>Tipografía</h3>
                         <a href="#">Turbo Editor</a>
                         <a href="#">Time Stopper</a>
                         <a href="#">Brain Enhancer</a>
                         <a href="#">Network Maker</a>
                     </div>
-                    <div class="icon-box flat">
-                        <div class="icon"><i class="fal fa-plug"></i></div>
-                        <div class="text">
-                            <div class="title">API Guide <i class="far fa-arrow-right"></i></div>
-                        </div>
+                    <div class="box">
+                        <h3>Iconos</h3>
+                        <a href="#">Turbo Editor</a>
+                        <a href="#">Time Stopper</a>
+                        <a href="#">Brain Enhancer</a>
+                        <a href="#">Network Maker</a>
                     </div>
-                    <div class="icon-box flat">
-                        <div class="icon"><i class="fal fa-comments"></i></div>
-                        <div class="text">
-                            <div class="title">Support Line <i class="far fa-arrow-right"></i></div>
-                        </div>
-                    </div>
-                    <div class="icon-box flat">
-                        <div class="icon"><i class="fal fa-phone-volume"></i></div>
-                        <div class="text">
-                            <div class="title">Live Chat <i class="far fa-arrow-right"></i></div>
-                        </div>
-                    </div>
-                    <div class="icon-box flat">
-                        <div class="icon"><i class="fal fa-book-spells"></i></div>
-                        <div class="text">
-                            <div class="title">Documentation <i class="far fa-arrow-right"></i></div>
-                        </div>
+                    <div class="box">
+                        <h3>Imágenes</h3>
+                        <a href="#">Turbo Editor</a>
+                        <a href="#">Time Stopper</a>
+                        <a href="#">Brain Enhancer</a>
+                        <a href="#">Network Maker</a>
                     </div>
                 </div>
             </div>
